;; This is a library.
(library
  (name hector_simplified)
)

;; Warnings are enabled in development builds and disabled in release builds.
;; Assertions are disabled in release builds.
(env
  (dev     (flags :standard -w @A-4-44))
  (release (flags :standard -noassert)
           (ocamlopt_flags :standard -S))
)
