;; This is a library.
(library
  (name hector)
  (public_name hector)
)

;; Warnings are enabled in development builds and disabled in release builds.
;; Assertions are disabled in release builds.
(env
  (dev     (flags :standard -w @A-4-44))
  (release (flags :standard -noassert ))
)

;; Request documentation.
(documentation)
