;; This is a library.
(library
  (name hector)
  (public_name hector)
)

;; Warnings are enabled in development builds and disabled in release builds.
;; Assertions are disabled in release builds.
(env
  (dev     (flags :standard -w @A-4-44))
  (release (flags :standard -noassert)
           (ocamlopt_flags :standard -S))
)

;; Some files require preprocessing by cppo.

(rule
  (targets Int.ml)
  (deps Int.cppo.ml (glob_files *.frag.ml))
  (action (run %{bin:cppo} Int.cppo.ml -o %{targets})))

(rule
  (targets Int.mli)
  (deps Int.cppo.mli (glob_files *.frag.mli))
  (action (run %{bin:cppo} Int.cppo.mli -o %{targets})))

(rule
  (targets Mono.ml)
  (deps Mono.cppo.ml (glob_files *.frag.ml))
  (action (run %{bin:cppo} Mono.cppo.ml -o %{targets})))

(rule
  (targets Mono.mli)
  (deps Mono.cppo.mli (glob_files *.frag.mli))
  (action (run %{bin:cppo} Mono.cppo.mli -o %{targets})))

(rule
  (targets Poly.ml)
  (deps Poly.cppo.ml (glob_files *.frag.ml))
  (action (run %{bin:cppo} Poly.cppo.ml -o %{targets})))

(rule
  (targets Poly.mli)
  (deps Poly.cppo.mli (glob_files *.frag.mli))
  (action (run %{bin:cppo} Poly.cppo.mli -o %{targets})))

(rule
  (targets Hector.ml)
  (deps Hector.cppo.ml (glob_files *.frag.ml))
  (action (run %{bin:cppo} Hector.cppo.ml -o %{targets})))

(rule
  (targets Hector.mli)
  (deps Hector.cppo.mli (glob_files *.frag.mli))
  (action (run %{bin:cppo} Hector.cppo.mli -o %{targets})))

;; Request documentation.
(documentation)
