;; This is a library.
(library
  (name hector)
  (public_name hector)
  (foreign_stubs (language c) (names memcpy))
)

;; Warnings are enabled in development builds and disabled in release builds.
;; Assertions are disabled in release builds.
(env
  (dev     (flags :standard -w @A-4-44))
  (release (flags :standard -noassert)
           (ocamlopt_flags :standard -S))
)

;; Some files require preprocessing by cppo.

(rule
  (targets IntArray.ml)
  (deps (:source IntArray.cppo.ml) (glob_files *.frag.{ml,mli}))
  (action (run %{bin:cppo} %{source} -o %{targets})))

(rule
  (targets Int.ml)
  (deps Int.cppo.ml (glob_files *.frag.{ml,mli}))
  (action (run %{bin:cppo} Int.cppo.ml -o %{targets})))

(rule
  (targets Int.mli)
  (deps Int.cppo.mli (glob_files *.frag.{ml,mli}))
  (action (run %{bin:cppo} Int.cppo.mli -o %{targets})))

(rule
  (targets Mono.ml)
  (deps Mono.cppo.ml (glob_files *.frag.{ml,mli}))
  (action (run %{bin:cppo} Mono.cppo.ml -o %{targets})))

(rule
  (targets Mono.mli)
  (deps Mono.cppo.mli (glob_files *.frag.{ml,mli}))
  (action (run %{bin:cppo} Mono.cppo.mli -o %{targets})))

(rule
  (targets Hector.ml)
  (deps Hector.cppo.ml (glob_files *.frag.{ml,mli}))
  (action (run %{bin:cppo} Hector.cppo.ml -o %{targets})))

(rule
  (targets Hector.mli)
  (deps Hector.cppo.mli (glob_files *.frag.{ml,mli}))
  (action (run %{bin:cppo} Hector.cppo.mli -o %{targets})))

;; Request documentation.
(documentation)
